lte status and connect fixes
